--- a/templates/home.html
+++ b/templates/home.html
@@ -19,9 +19,9 @@
 {% if post %}
     {% for post in post %}
         <div class="posts">
-            <h4>Title: {{ post.title }}</h4>
-            <p>Author of post: {{ post.author }}</p>
-            <a href="/post/{{post.id}}">Read more...</a>
+            <h4>Title: {{ post[2] }} </h4><br>
+            <p>Author of post: {{ post[1] }} </p>
+            <a href="/post/{{post[0]}}">Read more...</a>
         </div>
     {% endfor %}
 {% else  %}
