--- a/templates/register.html
+++ b/templates/register.html
@@ -4,28 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/home.css') }}">
-    <title>Login</title>
+    <title>Register</title>
 {% endblock %}
 
 {% block main %}
-    <mian>
-        <!DOCTYPE html>
-        <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Formulario de Ejemplo</title>
-</head>
-<body>
-    <h3>Login:</h3>
-    <form action="/login" method="post">
+    <h3>User Register:</h3>
+    <form action="/register" method="post">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username"><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password"><br>
-        <input type="submit" value="Send">
+        <button type="submit">Enviar</button>
     </form>
     <p style="color: red;" >{{error}}</p>
-</body>
-</html>
-    </mian>
 {% endblock %}
+
